--- a/flink-kryo-upgraded/Makefile
+++ b/flink-kryo-upgraded/Makefile
@@ -6,6 +6,10 @@ clean:
 build:
 	gradle --warning-mode all installDist
 
+.PHONY: test
+test:
+	gradle --warning-mode all test
+
 .PHONY: run
 run: build
 	 ./build/install/flink-kryo-upgraded/bin/flink-kryo-upgraded
